[gd_scene load_steps=12 format=2]

[ext_resource path="res://Props/Meteor.gd" type="Script" id=1]
[ext_resource path="res://Props/meteorShadow.png" type="Texture" id=2]
[ext_resource path="res://Props/meteor.png" type="Texture" id=3]
[ext_resource path="res://Player/fire_particle.png" type="Texture" id=4]
[ext_resource path="res://Props/expl.wav" type="AudioStream" id=5]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 1
light_mode = 0

[sub_resource type="Curve" id=2]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.109207, 0.918945 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]

flags = 4
width = 2048
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.2
angular_velocity = 50.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 10.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 2.0
scale_random = 0.0
scale_curve = SubResource( 3 )
color = Color( 1, 0.327087, 0.121094, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Initial Velocity", "Scale" ]

[sub_resource type="Animation" id=5]

length = 6.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("shadow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.4, 0.4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -309.333 ), Vector2( 0, -416 ), Vector2( 0, -16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.2, 4.3, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("shadow:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 52.3366

[node name="Meteor" type="Node2D"]

script = ExtResource( 1 )

[node name="shadow" type="Sprite" parent="." index="0"]

visible = false
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -309.333 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="SpawnTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="ExplosionTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="explosion" type="Particles2D" parent="." index="4"]

material = SubResource( 1 )
scale = Vector2( 0.8, 0.8 )
emitting = false
amount = 32
lifetime = 1.5
one_shot = true
preprocess = 0.0
speed_scale = 3.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 4 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Time", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 0
playback_default_blend_time = 1.0
playback_speed = 6.0
anims/Fall = SubResource( 5 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Area2D" type="Area2D" parent="." index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 6 )

[node name="HitSound" type="AudioStreamPlayer2D" parent="." index="7"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]


